# ai-configs

./: README.md
.github/workflows/: lint.yml
antigravity/: GEMINI.md
claude/: README.md  install.ps1  install.sh  plugins.md
claude/skills/lit-inbox/: SKILL.md
claude/skills/ngi-pptx/: REBUILD.md  SKILL.md
claude/skills/ngi-pptx/assets/: ngi-template.pptx
claude/skills/ngi-pptx/references/: layout-gallery.pptx  layouts.md
claude/skills/ngi-pptx/scripts/: check_integrity.py  inspect_template.py  make_gallery.py  make_public_zip.py  pptx_helpers.py
claude/skills/spec-first-phoenix/: SKILL.md
claude/skills/spec-first-phoenix/references/: sources.md  templates.md
project-templates/: pyproject.toml  ruff.toml
snippets/: geoscience-units.md  performance-logic.md
vscode/: claude-profile.md  codex-config.json
